# my-python-recipes

./: README.md  pyproject.toml
examples/basic/: loading_data.ipynb
examples/basic/data/: example.csv  example.json  example.jsonl  example.tsv  example.txt  example_no_header.csv
examples/data_frames/: pandas.ipynb
examples/embeddings/: README.md
examples/feature_engineering/: text_encoding.py
examples/modling/: modeling.ipynb
examples/preprocessing/: cleaning.py  normalization.py  word_tokenization.py
examples/visualization/: plot.ipynb
