[project]
name = "my-python-recipes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.uv]
dev-dependencies = [
    "jupyterlab>=4.2.5",
    "pandas>=2.2.2",
    "polars>=1.7.1",
    "requests>=2.32.3",
    "beautifulsoup4>=4.12.3",
    "janome>=0.5.0",
    "scikit-learn>=1.5.2",
    "matplotlib>=3.9.2",
    "tensorflow>=2.17.0",
    "h5py>=3.11.0",
]
